--- a/package.json
+++ b/package.json
@@ -5,13 +5,50 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+ "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.15",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
+    "@mui/styles": "^6.1.0",
+    "@mui/x-date-pickers": "^7.16.0",
+    "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.12",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
+    "envalid": "^8.0.0",
+    "express": "^4.18.2",
+    "html-react-parser": "^5.1.15",
+    "html-to-text": "^9.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "material-ui-confirm": "^3.0.16",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.9",
+    "pug": "^3.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tslib": "^2.3.0"
+    "react-error-boundary": "^4.0.13",
+    "react-google-autocomplete": "^2.7.3",
+    "react-hook-form": "^7.53.0",
+    "react-number-format": "^5.4.2",
+    "react-router-dom": "^6.26.2",
+    "redis": "^4.6.13",
+    "ts-node-dev": "^2.0.0",
+    "tslib": "^2.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nx/cypress": "19.8.0",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "@nx/eslint": "19.8.0",
     "@nx/eslint-plugin": "19.8.0",
     "@nx/jest": "19.8.0",
@@ -51,6 +88,8 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1"
-  }
+    "vitest": "^1.3.1",
+     "prisma": "^5.9.1"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
