--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
- "@emotion/react": "^11.13.3",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.15",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -16,6 +16,8 @@
     "@mui/styles": "^6.1.0",
     "@mui/x-date-pickers": "^7.16.0",
     "@prisma/client": "^5.19.1",
+    "@toolpad/core": "^0.7.0",
+    "@types/invariant": "^2.2.37",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.12",
@@ -26,6 +28,7 @@
     "express": "^4.18.2",
     "html-react-parser": "^5.1.15",
     "html-to-text": "^9.0.5",
+    "invariant": "^2.2.4",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "material-ui-confirm": "^3.0.16",
@@ -46,9 +49,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nx/cypress": "19.8.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@nx/cypress": "19.8.0",
     "@nx/eslint": "19.8.0",
     "@nx/eslint-plugin": "19.8.0",
     "@nx/jest": "19.8.0",
@@ -82,14 +85,14 @@
     "jsdom": "~22.1.0",
     "nx": "19.8.0",
     "prettier": "^2.6.2",
+    "prisma": "^5.9.1",
     "sass": "^1.55.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1",
-     "prisma": "^5.9.1"
+    "vitest": "^1.3.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
