--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@mui/styles": "^6.1.0",
     "@mui/x-date-pickers": "^7.16.0",
     "@prisma/client": "^5.19.1",
-    "@toolpad/core": "^0.7.0",
     "@types/invariant": "^2.2.37",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -31,6 +30,7 @@
     "invariant": "^2.2.4",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "material-react-table": "^3.0.1",
     "material-ui-confirm": "^3.0.16",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.9",
@@ -40,6 +40,7 @@
     "react-error-boundary": "^4.0.13",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.53.0",
+    "react-material-table": "^1.0.1",
     "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2",
     "redis": "^4.6.13",
