--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/invariant": "^2.2.37",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -29,6 +31,7 @@
     "html-react-parser": "^5.1.15",
     "html-to-text": "^9.0.5",
     "invariant": "^2.2.4",
+    "jodit-react": "^4.1.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "material-react-table": "^3.0.1",
@@ -37,10 +40,12 @@
     "nodemailer": "^6.9.9",
     "pug": "^3.0.2",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-material-table": "^1.0.1",
     "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2",
